--- a/trial.cfg
+++ b/trial.cfg
@@ -8,8 +8,8 @@ maossr.top
 my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
 cooc.cloud
 bbs.cloudnetwork.pro  clash  1
-ssr.biyaoshidian.top
-v2link.org
+
+v2link.pro
 sockboom.com  aff  0  exclude  VIP
 cyanmori.com  clash  1
 人人传承.com  clash  1
@@ -18,7 +18,6 @@ qlgq.top  clash  1
 www.ckcloud.xyz
 fastestcloud.xyz
 biubiufast.com
-blackholeservices.com
 giaoyun.xyz
 
 
