--- a/trial.cfg
+++ b/trial.cfg
@@ -5,7 +5,7 @@ ayucloud.services  clash  1
 
 
 
-my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
+#my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
 cooc.cloud
 bbs.cloudnetwork.pro  clash  1
 
