--- a/trial.cfg
+++ b/trial.cfg
@@ -3,7 +3,7 @@ maossr.top
 ayucloud.services  clash  1
 doumao.top  clash  1
 cryxr.xyz  clash  1
-www.ytdy666.buzz  clash  1
+www.ytdy666.buzz  sub  1
 
 #my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
 cooc.cloud
