--- a/trial.cfg
+++ b/trial.cfg
@@ -1,7 +1,7 @@
 
 maossr.top
 ayucloud.services  clash  1
-doumao.top  clash  1
+doumao.top  clash  1  invite_code  DSRm9DaO
 cryxr.xyz  clash  1
 www.ytdy666.buzz  sub  1
 
