--- a/trial.cfg
+++ b/trial.cfg
@@ -2,7 +2,7 @@
 maossr.top
 ayucloud.services  clash  1
 doumao.top  clash  1  invite_code  DSRm9DaO
-
+www.sacyun.cc  clash  1
 www.ytdy666.buzz  sub  1
 
 #my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
