--- a/trial.cfg
+++ b/trial.cfg
@@ -4,7 +4,9 @@ ayucloud.services  clash  1
 doumao.top  clash  1  invite_code  DSRm9DaO
 www.sacyun.cc  clash  1
 www.ytdy666.buzz  sub  1
-
+kan.gar.ooo
+nova.live  clash  1
+proxyvip.xyz
 #my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
 cooc.cloud
 bbs.cloudnetwork.pro  clash  1
