--- a/trial.cfg
+++ b/trial.cfg
@@ -7,6 +7,7 @@ www.ytdy666.buzz  sub  1
 kan.gar.ooo
 nova.live  clash  1
 proxyvip.xyz
+console.ly520.me
 #my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
 cooc.cloud
 bbs.cloudnetwork.pro  clash  1
