--- a/trial.cfg
+++ b/trial.cfg
@@ -9,7 +9,7 @@ nova.live  clash  1
 proxyvip.xyz
 console.ly520.me
 #my.overwall.run  clash  1  buy  period=month_price&plan_id=21&coupon_code=overwall10g
-nanbei.cloud  clash  1  buy  period=month_price&id=8&coupon_code=nb666
+nanbei.cloud  clash  1  buy  period=month_price&plan_id=8&coupon_code=nb666
 cooc.cloud
 bbs.cloudnetwork.pro  clash  1
 
