--- a/trial.cfg
+++ b/trial.cfg
@@ -25,4 +25,42 @@ biubiufast.com
 giaoyun.xyz
 
 
+zwtg888.com
+znetvpn.club
+jd.bai.gay
+chy.fit
+vipxgyun.com
+kmbyun.com
+kthjsq.com
+api-pf.xyz
+tui889.xyz
+iqiaqia.xyz
+mgnet.vip
+mukzz.ink
+moyucloud.com
+sks.skin
+kthyun.com
+marslink.org
+niuniucloud.top
+airport.xiaoheizis.xyz
+tomlink.org
+cryxr.xyz
+jc217.bamim.co
+kkcloud.xyz
+cdn.dnfcflol.top
+ijsfq.xyz
+paopaocloud.com
+ziyun.cyou
+mukurl.com
+xindongli136.xyz
+66yun104.xyz
+guoyuanbar.com
+q88q.de
+mcecloud.com
+wudp.xyz
+www.crew.icu
+vpiv.app  sub  1
+kuaicloud.xyz
+
+
 
