--- a/trial.cfg
+++ b/trial.cfg
@@ -1,7 +1,7 @@
 
 maossr.top
 ayucloud.services  clash  1
-doumao.top  clash  1  invite_code  DSRm9DaO
+#doumao.top  clash  1  invite_code  DSRm9DaO
 www.sacyun.cc  clash  1
 www.ytdy666.buzz  sub  1
 kan.gar.ooo
@@ -24,7 +24,7 @@ fastestcloud.xyz
 biubiufast.com
 giaoyun.xyz
 
-v2.mk  clash  1
+#v2.mk  clash  1
 zwtg888.com
 suannai123.xyz
 vipxgyun.com
