--- a/trial.cfg
+++ b/trial.cfg
@@ -41,5 +41,9 @@ vpiv.app  sub  1
 cdn.dnfcflol.top
 v2link.pro
 ssr.biyaoshidian.top
+guoyuanbar.com
+66yun104.xyz
+ziyun.cyou  clash  1
+xindongli136.xyz  clash  1
 
 
