--- a/trial.cfg
+++ b/trial.cfg
@@ -3,7 +3,7 @@ maossr.top
 ayucloud.services  clash  1
 bbs.cloudnetwork.pro  clash  1
 #doumao.top  clash  1  invite_code  DSRm9DaO
-sacyun.cc
+#sacyun.cc
 www.ytdy666.buzz  sub  1
 kan.gar.ooo
 nova.live  clash  1
@@ -21,7 +21,7 @@ qlgq.top  clash  1
 
 www.ckcloud.xyz
 fastestcloud.xyz
-biubiufast.com
+#biubiufast.com
 giaoyun.xyz
 
 #v2.mk  clash  1
