--- a/trial.cfg
+++ b/trial.cfg
@@ -14,7 +14,7 @@ cooc.cloud
 
 
 
-sockboom.com  aff  0  exclude  VIP
+sockboom.link  aff  0  exclude  VIP
 cyanmori.com  clash  1
 人人传承.com  clash  1
 qlgq.top  clash  1
