--- a/trial.cfg
+++ b/trial.cfg
@@ -31,9 +31,9 @@ vipxgyun.com
 iqiaqia.xyz
 mgnet.vip
 cryxr.xyz
-ijsfq.xyz
+#ijsfq.xyz
 q88q.de  sub  3
-mcecloud.com
+#mcecloud.com
 www.crew.icu
 vpiv.app  sub  1
 ssr.biyaoshidian.top
