--- a/trial.cfg
+++ b/trial.cfg
@@ -33,7 +33,7 @@ mgnet.vip
 cryxr.xyz
 #ijsfq.xyz
 q88q.de  sub  3
-mcecloud.com
+#mcecloud.com
 www.crew.icu
 vpiv.app  sub  1
 ssr.biyaoshidian.top
