--- a/trial.cfg
+++ b/trial.cfg
@@ -3,17 +3,16 @@ maossr.top
 ayucloud.services  clash  1
 bbs.cloudnetwork.pro  clash  1
 #doumao.top  clash  1  invite_code  DSRm9DaO
-https://sacyun.cc
 www.ytdy666.buzz  sub  1
 kan.gar.ooo
 nova.live  clash  1
 proxyvip.xyz
 console.ly520.me
 nanbei.cloud  clash  1  buy  period=month_price&plan_id=8&coupon_code=nb666
+
+
+
 cooc.cloud
-
-
-
 sockboom.link  aff  0  exclude  VIP
 cyanmori.com  clash  1
 人人传承.com  clash  1
@@ -24,21 +23,20 @@ fastestcloud.xyz
 biubiufast.com
 giaoyun.xyz
 
-#v2.mk  clash  1
+
 
 suannai123.xyz
 vipxgyun.com
 iqiaqia.xyz
 mgnet.vip
 cryxr.xyz
-#ijsfq.xyz
 q88q.de  sub  3
-#mcecloud.com
 www.crew.icu
 vpiv.app  sub  1
 ssr.biyaoshidian.top
 ziyun.cyou  clash  1
 
 dash.全球上网.com
-
+https://sacyun.cc
+klxq.djgskc.top
 
