--- a/.github/workflows/get_trial.yml
+++ b/.github/workflows/get_trial.yml
@@ -2,7 +2,7 @@ name: get_trial.py
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0/5 * * * *'
+    - cron:  '0/5 1,15 * * *'
 permissions: write-all
 jobs:
   main:
